--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,6 @@ body {
 }
 h1 {
 	text-align: center;
-    padding-right: 69px;
     font-family: "Palatino Linotype";
     color: #F6F6FF;
 }
